@@ -54,9 +54,12 @@ public interface TikaCoreProperties {
      *
      */
     public enum EmbeddedResourceType {
-        INLINE,
-        ATTACHMENT,
-        MACRO
+        INLINE, //image that is intended to be displayed in a rendering of the file
+        ATTACHMENT,//standard attachment as in email
+        MACRO, //any code that is intended to be run by the application
+        METADATA, //e.g. xmp, xfa
+        FONT;//embedded font files
+        //what else?
     };
 
     /**
