@@ -1,4 +1,8 @@
 Release 1.24 - ???
+
+   * Added XMLProfiler as an optional parser to profile XFA and XMP
+     in PDFs (TIKA-3045).
+
    * Extract inline images that rely on the DCT filter from PDFs (TIKA-3041).
 
    * Upgrade to PDFBox 2.0.18 (TIKA-3021).
